--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
+    "redux-persist": "^6.0.0",
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
